cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_331.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/testutil/format_output.c:331: error: DEAD_STORE
  The value written to &p (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/testutil/format_output.c:331:10: Write of unused value
329.                   real_diff = diff = 1;
330.               }
331.           *p++ = '\0';
                ^
332.           if (!diff) {
333.               test_printf_stderr(" %s:% 5d\n", n2 > n1 ? b2 : b1, cnt);
